# suikei-rs

./: .gitignore  Cargo.toml  Dockerfile  ProcFile  README.md  _herokurun.sh  downloader.py  exec.bat  fly.toml  server.bat  show.py
docs/: index.html  map.html
src/: lib.rs  main.rs  standalone.rs
