[package]
name = "suikei_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "standalone"
path = "src/standalone.rs"

[dependencies]
csv = "1.3.1"
image = "0.23.14"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rand = "0.9.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.219"
base64 = "0.22.1"
pnet = "0.28.0"
